attempting to fix the intro line 2 in main.css, looks odd on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3394,7 +3394,7 @@ input, select, textarea {
 
 		#intro h2 {
 			font-size: 2rem;
-			line-height: 0;
+			line-height: 1.2;
 		}
 
 		#intro p {
